# wyexpand

./: CMakeLists.txt  README.md
include/wyexpand/: header.h
scripts/: lruntest.sh
src/: exec.cpp  wyexpand.cpp
